--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: FrankB4U/AGS
+  repo: FrankB4U/AGS     # your GitHub repo
   branch: main
-  base_url: "https://agscms.netlify.app/.netlify/functions"
+  base_url: https://agscms.netlify.app/.netlify/functions
   auth_endpoint: auth
 
 media_folder: "uploads"
