--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: FrankB4U/AGS
   branch: main
   base_url: https://agscms.netlify.app/.netlify/functions
+  auth_endpoint: start
   
 media_folder: "uploads"
 public_folder: "/uploads"
